# ai-teacher-robot

./: .gitignore  README.md  alembic.ini  app.py  dev.bat  main.py  package-lock.json  pi_robot_client.py  pyproject.toml  requirements.txt  run.bat  run.sh
.github/workflows/: test.yml
api/: index.py  requirements.txt
app/: main.py
backend/: README.md  client.py
backend/app/: main.py
backend/app/agents/: pipeline_agents.py
backend/app/api/: server.py
backend/app/core/: __init__.py  config.py  database.py  document_loader.py  llm_caller.py  orchestrator.py  security.py  vector_store.py
backend/app/models/: models.py
backend/app/routers/: voice_attendance.py
backend/app/schemas/: __init__.py  attendance.py  contracts.py  drive_enrollment.py  student.py  timetable.py  voice.py
backend/app/services/: attendance_service.py  attendance_tool.py  deepgram_service.py  drive_enrollment_service.py  drive_service.py  face_service.py  face_voice_sync.py  face_ws_server.py  gemini_service.py  motor_service.py  offline_llm_service.py  openai_service.py  robot_state_service.py  teacher_behavior_service.py  voice_orchestrator.py
backend/app/utils/: audio_utils.py  ben_hook.py  helpers.py  image_processing.py
backend/app/voice/: __init__.py  classroom_modes.py  pipeline.py  wake_word.py
backend/web/: index.html  webcam.html
data/: science_notes_class_8.md
frontend/: README.md  index.html  package-lock.json  package.json
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  20260426_0459_8e9cbf145d2f_add_face_encoding_to_student.py
(+44 files in other folders)
