[project]
name = "ai-teacher-robot"
version = "0.1.0"
description = "Zoro AI Teacher Robot Unified Backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "python-multipart>=0.0.9",
    "sqlalchemy[asyncio]>=2.0.31",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.1.3",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.3.4",
    "python-dotenv>=1.0.1",
    "structlog>=24.1.0",
    "python-json-logger>=2.0.7",
    "httpx>=0.27.2",
    "slowapi>=0.1.9",
    "aiofiles>=23.2.1",
    "opencv-contrib-python-headless>=4.9.0.80",
    "numpy>=1.26.4",
    "scipy>=1.13.1",
    "webrtcvad>=2.0.10",
    "sounddevice>=0.4.7",
]

[project.scripts]
app = "main:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
